--- a/templates/rsyslog_dropin.conf.j2
+++ b/templates/rsyslog_dropin.conf.j2
@@ -1,4 +1,15 @@
 # {{ ansible_managed }}
+{# TODO: NEED REFACTOR #}
+{% set comment_config = "" %}
+{% set comment_result = [] %}
 {% for lines in item.content %}
-{{ lines }}
+{%   set comment_config = (lines|regex_search("^#{1}+.+$")|regex_replace("^#{1}+", "")) %}
+{%   set comment_result = comment_result.append(comment_config) if comment_config %}
+{% endfor %}
+{% set line = [] %}
+{% for line in item.content %}
+{%   set line = (line|regex_replace("^#{1}+", "")) %}
+{%   if line not in comment_result %}
+{{     line }}
+{%   endif %}
 {% endfor %}
